--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "CLient portal for customers to make orders",
   "main": "src/index.js",
   "scripts": {
+    "start": "webpack-dev-server --mode development --open --hot",
+    "build": "webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -24,6 +26,7 @@
     "webpack-dev-server": "^3.10.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.7.7",
     "@babel/preset-env": "^7.7.7",
     "@babel/preset-react": "^7.7.4",
     "babel-core": "^6.26.3",
